--- a/index.html
+++ b/index.html
@@ -7,27 +7,34 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Hello WebXR!</title>
 
-  <!-- three.js -->
-  <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
+  <style>
+    canvas {
+      background: red;
+    }
+  </style>
+
 </head>
 
 <body>
+  <!-- three.js -->
+  <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
 
   <!-- Starting an immersive WebXR session requires user interaction.
     We start this one with a simple button. -->
   <button onclick="activateXR()">Start Hello WebXR</button>
   <script>
-    function activateXR() {
+    var canvas, gl;
+    async function activateXR() {
       // Add a canvas element and initialize a WebGL context that is compatible with WebXR.
-      const canvas = document.createElement("canvas");
+      canvas = document.createElement("canvas");
       document.body.appendChild(canvas);
-      const gl = canvas.getContext("webgl", { xrCompatible: true });
+      gl = canvas.getContext("webgl", { xrCompatible: true });
 
       // To be continued in upcoming steps.
     }
 
     // Set up the WebGLRenderer, which handles rendering to the session's base layer.
-    const renderer = new THREE.WebGLRenderer({
+    var renderer = new THREE.WebGLRenderer({
       alpha: true,
       preserveDrawingBuffer: true,
       canvas: canvas,
@@ -38,13 +45,13 @@
     // The API directly updates the camera matrices.
     // Disable matrix auto updates so three.js doesn't attempt
     // to handle the matrices independently.
-    const camera = new THREE.PerspectiveCamera();
+    var camera = new THREE.PerspectiveCamera();
     camera.matrixAutoUpdate = false;
 
-    const scene = new THREE.Scene();
+    var scene = new THREE.Scene();
 
     // The cube will have a different color on each side.
-    const materials = [
+    var materials = [
       new THREE.MeshBasicMaterial({ color: 0xff0000 }),
       new THREE.MeshBasicMaterial({ color: 0x0000ff }),
       new THREE.MeshBasicMaterial({ color: 0x00ff00 }),
@@ -54,7 +61,7 @@
     ];
 
     // Create the cube and add it to the demo scene.
-    const cube = new THREE.Mesh(new THREE.BoxBufferGeometry(0.2, 0.2, 0.2), materials);
+    var cube = new THREE.Mesh(new THREE.BoxBufferGeometry(0.2, 0.2, 0.2), materials);
     cube.position.set(1, 1, 1);
     scene.add(cube);
   </script>
