--- a/index.html
+++ b/index.html
@@ -1,69 +1,223 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Hello WebXR!</title>
-
+  <title>Hit Testing</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="author" content="WebXR Academy">
+  <!-- <link type="text/css" rel="stylesheet" href="style.css"> -->
   <style>
+    body {
+      margin: 0;
+      background-color: #000;
+      color: #fff;
+      font-family: Monospace;
+      font-size: 16px;
+      line-height: 24px;
+      overscroll-behavior: none;
+    }
+
+    a {
+      color: #ff0;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    button {
+      cursor: pointer;
+      text-transform: uppercase;
+    }
+
     canvas {
-      background: red;
+      display: block;
+    }
+
+    a,
+    button,
+    input,
+    select {
+      pointer-events: auto;
     }
   </style>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <!-- three.js -->
-  <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
+  <script type="module">
+    // In this example you should be able to place a cone on top of a surface (like a floor or table)
+    // On your phone, you have to tap the screen to place a phone where the circle shows up
+    // On the desktop emulator you have to "right-click" to simulate a tap
 
-  <!-- Starting an immersive WebXR session requires user interaction.
-    We start this one with a simple button. -->
-  <button onclick="activateXR()">Start Hello WebXR</button>
-  <script>
-    var canvas, gl;
-    async function activateXR() {
-      // Add a canvas element and initialize a WebGL context that is compatible with WebXR.
-      canvas = document.createElement("canvas");
-      document.body.appendChild(canvas);
-      gl = canvas.getContext("webgl", { xrCompatible: true });
+    import { ARButton } from "https://unpkg.com/three@0.126.0/examples/jsm/webxr/ARButton.js";
 
-      // To be continued in upcoming steps.
+    let container;
+    let camera, scene, renderer;
+    let reticle;
+    let controller;
+
+    init();
+    animate();
+
+    function init() {
+      container = document.createElement("div");
+      document.body.appendChild(container);
+
+      scene = new THREE.Scene();
+
+      camera = new THREE.PerspectiveCamera(
+        70,
+        window.innerWidth / window.innerHeight,
+        0.01,
+        20
+      );
+
+      renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+      renderer.setPixelRatio(window.devicePixelRatio);
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.xr.enabled = true;
+      container.appendChild(renderer.domElement);
+
+      var light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
+      light.position.set(0.5, 1, 0.25);
+      scene.add(light);
+
+      controller = renderer.xr.getController(0);
+      controller.addEventListener('select', onSelect);
+      scene.add(controller);
+
+      addReticleToScene();
+
+      const button = ARButton.createButton(renderer, {
+        requiredFeatures: ["hit-test"] // notice a new required feature
+      });
+      document.body.appendChild(button);
+      renderer.domElement.style.display = "none";
+
+      window.addEventListener("resize", onWindowResize, false);
     }
 
-    // Set up the WebGLRenderer, which handles rendering to the session's base layer.
-    var renderer = new THREE.WebGLRenderer({
-      alpha: true,
-      preserveDrawingBuffer: true,
-      canvas: canvas,
-      context: gl
-    });
-    renderer.autoClear = false;
+    function addReticleToScene() {
+      const geometry = new THREE.RingBufferGeometry(0.15, 0.2, 32).rotateX(
+        -Math.PI / 2
+      );
+      const material = new THREE.MeshBasicMaterial();
 
-    // The API directly updates the camera matrices.
-    // Disable matrix auto updates so three.js doesn't attempt
-    // to handle the matrices independently.
-    var camera = new THREE.PerspectiveCamera();
-    camera.matrixAutoUpdate = false;
+      reticle = new THREE.Mesh(geometry, material);
 
-    var scene = new THREE.Scene();
+      // we will calculate the position and rotation of this reticle every frame manually
+      // in the render() function so matrixAutoUpdate is set to false
+      reticle.matrixAutoUpdate = false;
+      reticle.visible = false; // we start with the reticle not visible
+      scene.add(reticle);
 
-    // The cube will have a different color on each side.
-    var materials = [
-      new THREE.MeshBasicMaterial({ color: 0xff0000 }),
-      new THREE.MeshBasicMaterial({ color: 0x0000ff }),
-      new THREE.MeshBasicMaterial({ color: 0x00ff00 }),
-      new THREE.MeshBasicMaterial({ color: 0xff00ff }),
-      new THREE.MeshBasicMaterial({ color: 0x00ffff }),
-      new THREE.MeshBasicMaterial({ color: 0xffff00 })
-    ];
+      // optional axis helper you can add to an object
+      // reticle.add(new THREE.AxesHelper(1));
+    }
 
-    // Create the cube and add it to the demo scene.
-    var cube = new THREE.Mesh(new THREE.BoxBufferGeometry(0.2, 0.2, 0.2), materials);
-    cube.position.set(1, 1, 1);
-    scene.add(cube);
+    function onSelect() {
+      if (reticle.visible) {
+        // cone added at the point of a hit test
+        // replace the next lines to add your own object in space
+        const geometry = new THREE.CylinderBufferGeometry(0, 0.05, 0.2, 32);
+        const material = new THREE.MeshPhongMaterial({
+          color: 0xffffff * Math.random()
+        });
+        const mesh = new THREE.Mesh(geometry, material);
+
+        // set the position of the cylinder based on where the reticle is          
+        mesh.position.setFromMatrixPosition(reticle.matrix);
+        mesh.quaternion.setFromRotationMatrix(reticle.matrix);
+
+        scene.add(mesh);
+      }
+    }
+
+    function onWindowResize() {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    }
+
+    function animate() {
+      renderer.setAnimationLoop(render);
+    }
+
+    // read more about hit testing here:
+    // https://github.com/immersive-web/hit-test/blob/master/hit-testing-explainer.md
+    // https://web.dev/ar-hit-test/
+
+    // hit testing provides the position and orientation of the intersection point, but nothing about the surfaces themselves.
+
+    let hitTestSource = null;
+    let localSpace = null;
+    let hitTestSourceInitialized = false;
+
+    // This function gets called just once to initialize a hitTestSource
+    // The purpose of this function is to get a) a hit test source and b) a reference space
+    async function initializeHitTestSource() {
+      const session = renderer.xr.getSession(); // XRSession
+
+      // Reference spaces express relationships between an origin and the world.
+
+      // For hit testing, we use the "viewer" reference space,
+      // which is based on the device's pose at the time of the hit test.
+      const viewerSpace = await session.requestReferenceSpace("viewer");
+      hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
+
+      // We're going to use the reference space of "local" for drawing things.
+      // which gives us stability in terms of the environment.
+      // read more here: https://developer.mozilla.org/en-US/docs/Web/API/XRReferenceSpace
+      localSpace = await session.requestReferenceSpace("local");
+
+      // set this to true so we don't request another hit source for the rest of the session
+      hitTestSourceInitialized = true;
+
+      // In case we close the AR session by hitting the button "End AR"
+      session.addEventListener("end", () => {
+        hitTestSourceInitialized = false;
+        hitTestSource = null;
+      });
+    }
+
+    // the callback from 'setAnimationLoop' can also return a timestamp
+    // and an XRFrame, which provides access to the information needed in
+    // order to render a single frame of animation for an XRSession describing
+    // a VR or AR sccene.
+    function render(timestamp, frame) {
+      if (frame) {
+        // 1. create a hit test source once and keep it for all the frames
+        // this gets called only once
+        if (!hitTestSourceInitialized) {
+          initializeHitTestSource();
+        }
+
+        // 2. get hit test results
+        if (hitTestSourceInitialized) {
+          // we get the hit test results for a particular frame
+          const hitTestResults = frame.getHitTestResults(hitTestSource);
+
+          // XRHitTestResults The hit test may find multiple surfaces. The first one in the array is the one closest to the camera.
+          if (hitTestResults.length > 0) {
+            const hit = hitTestResults[0];
+            // Get a pose from the hit test result. The pose represents the pose of a point on a surface.
+            const pose = hit.getPose(localSpace);
+
+            reticle.visible = true;
+            // Transform/move the reticle image to the hit test position
+            reticle.matrix.fromArray(pose.transform.matrix);
+          } else {
+            reticle.visible = false;
+          }
+        }
+
+        renderer.render(scene, camera);
+      }
+    }
   </script>
 </body>
 
