--- a/index.html
+++ b/index.html
@@ -6,44 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="author" content="WebXR Academy">
-  <!-- <link type="text/css" rel="stylesheet" href="style.css"> -->
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      color: #fff;
-      font-family: Monospace;
-      font-size: 16px;
-      line-height: 24px;
-      overscroll-behavior: none;
-    }
-
-    a {
-      color: #ff0;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    button {
-      cursor: pointer;
-      text-transform: uppercase;
-    }
-
-    canvas {
-      display: block;
-    }
-
-    a,
-    button,
-    input,
-    select {
-      pointer-events: auto;
-    }
-  </style>
+  <link type="text/css" rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 
 <body>
@@ -58,6 +23,7 @@
     let camera, scene, renderer;
     let reticle;
     let controller;
+    let loader;
 
     init();
     animate();
@@ -84,6 +50,9 @@
       var light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
       light.position.set(0.5, 1, 0.25);
       scene.add(light);
+
+      // specify a model URL
+      const modelUrl = 'https://raw.githubusercontent.com/immersive-web/webxr-samples/main/media/gltf/space/space.gltf';
 
       controller = renderer.xr.getController(0);
       controller.addEventListener('select', onSelect);
@@ -122,17 +91,51 @@
       if (reticle.visible) {
         // cone added at the point of a hit test
         // replace the next lines to add your own object in space
-        const geometry = new THREE.CylinderBufferGeometry(0, 0.05, 0.2, 32);
-        const material = new THREE.MeshPhongMaterial({
-          color: 0xffffff * Math.random()
-        });
-        const mesh = new THREE.Mesh(geometry, material);
+        // const geometry = new THREE.CylinderBufferGeometry(0, 0.05, 0.2, 32);
+        // const material = new THREE.MeshPhongMaterial({
+        //   color: 0xffffff * Math.random()
+        // });
+        // const mesh = new THREE.Mesh(geometry, material);
 
-        // set the position of the cylinder based on where the reticle is          
-        mesh.position.setFromMatrixPosition(reticle.matrix);
-        mesh.quaternion.setFromRotationMatrix(reticle.matrix);
+        // // set the position of the cylinder based on where the reticle is          
+        // mesh.position.setFromMatrixPosition(reticle.matrix);
+        // mesh.quaternion.setFromRotationMatrix(reticle.matrix);
 
-        scene.add(mesh);
+        // scene.add(mesh);
+
+        // create a GLTF loader object. GLTF is a 3D model format usually called the "JPEG of 3D" because it is
+        // fast and efficient to use, which is ideal for the web
+        loader = new THREE.GLTFLoader();
+
+        // learn about other types of 3D model formats you can use here: 
+        // https://threejs.org/docs/#manual/en/introduction/Loading-3D-models
+
+        // load the model
+        // loader takes in a few arguments loader(model url, onLoad callback, onProgress callback, onError callback)
+        loader.load(
+          // model URL
+          modelUrl,
+          // onLoad callback: what get's called once the full model has loaded
+          function (gltf) {
+            // gltf.scene contains the Three.js object group that represents the 3d object of the model
+            scene.add(gltf.scene);
+            console.log("Model added to scene");
+
+            // you can optionally change the position of the model
+            // gltf.scene.position.z = -10; // negative Z moves the model in the opposite direction the camera is facing
+            // gltf.scene.position.y = 5; // positive Y moves the model up
+            // gltf.scene.position.x = 10; // positive X moves hte model to the right
+          },
+          // onProgress callback: optional function for showing progress on model load
+          function (xhr) {
+            // console.log((xhr.loaded / xhr.total * 100) + '% loaded' );
+          },
+          // onError callback
+          function (error) {
+            console.error(error);
+          }
+        );
+
       }
     }
 
