--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
       // load the model
       // loader takes in a few arguments loader(model url, onLoad callback, onProgress callback, onError callback)
+      let modelUrl = 'https://raw.githubusercontent.com/immersive-web/webxr-samples/main/media/gltf/space/space.gltf';
       loader.load(
         // model URL
         modelUrl,
