--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       scene.add(light);
 
       // specify a model URL
-      let modelUrl = 'https://raw.githubusercontent.com/immersive-web/webxr-samples/main/media/gltf/space/space.gltf';
+      let modelUrl = 'media/gltf/leaves/leaf_light.gltf';
 
       controller = renderer.xr.getController(0);
       controller.addEventListener('select', onSelect);
@@ -112,7 +112,7 @@
 
       // load the model
       // loader takes in a few arguments loader(model url, onLoad callback, onProgress callback, onError callback)
-      let modelUrl = 'https://raw.githubusercontent.com/immersive-web/webxr-samples/main/media/gltf/space/space.gltf';
+      let modelUrl = 'media/gltf/leaves/leaf_light.gltf';
       loader.load(
         // model URL
         modelUrl,
